# ngame

./: .gitignore  .readme.swp  CMakeLists.txt  readme  todo
examples/: CMakeLists.txt
examples/3d_test_scene/: CMakeLists.txt  help.txt  main.cpp  test_scene.cpp  test_scene.hpp
examples/animal_sim/: CMakeLists.txt  animal_sim.cpp  animal_sim.hpp  main.cpp  render_ext.cpp  render_ext.hpp
examples/arkanoid_v3/: CMakeLists.txt  help.txt  main.cpp  sc_level.cpp  sc_level.hpp  sc_master.cpp  sc_master.hpp
examples/arkanoid_v3/proto/: collisions.cpp  collisions.hpp  objects.cpp  objects.hpp
examples/arkanoid_v3/res/: wave.sh
examples/flock/: CMakeLists.txt  flock.cpp  flock.hpp  main.cpp
examples/game_of_life/: CMakeLists.txt  gol.cpp  gol.hpp  main.cpp
examples/game_of_life/res/: level  pp_pass.sh  wave.sh
examples/gravity/: CMakeLists.txt  gravity.cpp  gravity.hpp  gravity.sh  main.cpp
examples/guru_test/: CMakeLists.txt  main.cpp  testscene.cpp  testscene.hpp
examples/mandelbrot/: CMakeLists.txt  compute.sh  help.txt  main.cpp  mandelbrot.cpp  mandelbrot.hpp  render.sh
examples/snake/: CMakeLists.txt  help.txt  main.cpp  menu.cpp  menu.hpp  snake.cpp  snake.hpp
examples/test_scene/: CMakeLists.txt  help.txt  main.cpp  menu.cpp  menu.hpp  test_scene.cpp  test_scene.hpp
examples/test_scene/res/: pp_unit.sh  shader1.sh  wave.sh
examples/text_editor/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
include/NGAME/: app.hpp  blend.hpp  common.hpp  del.hpp  font.hpp  font_loader.hpp  glad.h  guru.hpp  guruscene.hpp  pp_unit.hpp  renderer2d.hpp  scene.hpp  sound.hpp  sprite.hpp  text.hpp  vspace.hpp
include/NGAME/3d/: camera.hpp  inst3d.hpp  model.hpp  renderer3d.hpp
include/NGAME/gl/: base.hpp  buffers.hpp  shader.hpp  texture.hpp
src/: CMakeLists.txt  app.cpp  blend.cpp  buffers.cpp  font.cpp  font_loader.cpp  glad.c  guru.cpp  guru.sh  guruscene.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl_gl3.cpp  main.cpp  pp_unit.cpp  renderer2d.cpp  scene.cpp  shader.cpp  sound.cpp  sprite.cpp  text.cpp  texture.cpp  vspace.cpp
src/3d/: 3d.sh  camera.cpp  cube.hpp  light.sh  model.cpp  renderer3d.cpp
src/shaders/: sprite.sh
